k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dz-clustering-api
  labels:
    app: dz-clustering
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: dz-clustering
    component: api
---
apiVersion: v1
kind: Service
metadata:
  name: dz-clustering-metrics
  labels:
    app: dz-clustering
    component: metrics
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: metrics
  selector:
    app: dz-clustering
    component: api
